# kafka-trail

./: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  LICENSE  README.md  docker-compose.infra.yaml  eslint.config.js  jest.config.int.json  jest.config.unit.json  package.json  tsconfig.build.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: release.yaml
.husky/: pre-commit  pre-push
native/lz4/: Cargo.toml  index.cjs  index.d.cts  package.json
native/lz4/src/: lib.rs
src/: index.ts  test-module-file.ts  test.ts
src/__tests__/: aws-glue-adapter.unit.test.ts  consumer-handlers.int.test.ts  consumer-handlers.unit.test.ts  kafka-consumer.unit.test.ts  kafka-producer.int.test.ts  kafka-producer.unit.test.ts  message-queue.unit.test.ts  observability.unit.test.ts  schema-adapters.unit.test.ts  schema-codec.unit.test.ts  topic-batch.unit.test.ts
src/__tests__/mocks/: create-mocks.ts  lz4-native.ts
src/codec/: lz4-codec.ts
src/custom-errors/: custom-error.ts  kafka-errors.ts
src/kafka/: consumer-handler.ts  custom-partitioner.ts  kafka-broker.ts  kafka-consumer.ts  kafka-producer.ts  kafka-types.ts  topic-batch.ts  topic.ts
src/kafka/runtime/: confluent-adapter.ts  confluent-kafkajs-adapter.ts  kafkajs-adapter.ts  runtime-factory.ts  transport-types.ts
src/libs/branded-types/branded/: index.ts
src/libs/branded-types/kafka/: index.ts
src/libs/helpers/: castings.ts  default-data-parser.ts  observability.ts  retry.ts  topic-name.ts
src/libs/schema/: schema-codec.ts  schema-errors.ts
src/message-queue/: index.ts
(+3 files in other folders)
